--- a/index.html
+++ b/index.html
@@ -6,29 +6,20 @@
         body, table { font-family: Helvetica, Arial, sans-serif; font-size: 13px; }
         a { color: #006DBA; }
     </style>
-    <!--NUMBER--aqsswcpm--NUMBER-->
-    <!--TYPE--RichText--TYPE-->
-    <!--PERMISSION--Readonly--PERMISSION-->
-    <!--ACCESS--Public--ACCESS-->
-    <!--PASSWORD----PASSWORD-->
-    <!--STATUS--Active--STATUS-->
-    <!--QUICKEDIT--False--QUICKEDIT-->
-    <!--QUICKEDITPASSWORD----QUICKEDITPASSWORD-->
-    <!--DATECREATED--2021-08-29 11:11:18--DATECREATED-->
-    <!--DATEUPDATED--2021-12-11 04:40:44--DATEUPDATED-->
-    <!--LABELS--Google Drive--LABELS-->
 </head>
 <body>
 <h2>Drakengard 3 [BLUS31197]-[Gutamps Official]</h2>
-<anotepad><p>Part 1 : <a href="https://mega.nz/file/0tEUnDQA#GXwlxsH5s_8WR_kdwfn3vzkfVitV3w07ldUskbaMl9E" target="_blank" rel="noopener">https://mega.nz/file/0tEUnDQA#GXwlxsH5s_8WR_kdwfn3vzkfVitV3w07ldUskbaMl9E</a></p>
-<p>Part 2 : <a href="https://mega.nz/file/wg9RHSRR#7yjBFX6EsPszHqUhDC5RuKW15Tnm5uvpw8DVLKnhTBU" target="_blank" rel="noopener">https://mega.nz/file/wg9RHSRR#7yjBFX6EsPszHqUhDC5RuKW15Tnm5uvpw8DVLKnhTBU</a></p>
-<p>Part 3 : <a href="https://mega.nz/file/A41S0YKI#DS7f7T3trZGOQSRbAesoYIES2qyeXJXL9yOB4DQtUZA" target="_blank" rel="noopener">https://mega.nz/file/A41S0YKI#DS7f7T3trZGOQSRbAesoYIES2qyeXJXL9yOB4DQtUZA</a></p>
-<p>Part 4 : <a href="https://mega.nz/file/00cxTKSQ#8tbFohJB7eLp9HpL2k49FdgtdY8xxiUlYVgij2yWNSs" target="_blank" rel="noopener">https://mega.nz/file/00cxTKSQ#8tbFohJB7eLp9HpL2k49FdgtdY8xxiUlYVgij2yWNSs</a></p>
-<p>Part 5 : <a href="https://mega.nz/file/J9dFRDJQ#ZpaYucfbM92j4TsTyZIczt9VUCUnYYJuZ5R7FTqqAIk" target="_blank" rel="noopener">https://mega.nz/file/J9dFRDJQ#ZpaYucfbM92j4TsTyZIczt9VUCUnYYJuZ5R7FTqqAIk</a></p>
-<p>Part 6 : <a href="https://mega.nz/file/p4EAnbqI#UvjYLysB-DCQqF_PNf7UaXWISAqE57btMbISveCudhE" target="_blank" rel="noopener">https://mega.nz/file/p4EAnbqI#UvjYLysB-DCQqF_PNf7UaXWISAqE57btMbISveCudhE</a></p>
-<p>Part 7 : <a href="https://mega.nz/file/ppFBgbSZ#eDCKjkKUwyXm9ekqtB5WbIBG_iBcOZ3PUCggJ9kaRP8" target="_blank" rel="noopener">https://mega.nz/file/ppFBgbSZ#eDCKjkKUwyXm9ekqtB5WbIBG_iBcOZ3PUCggJ9kaRP8</a></p>
-<p>Part 8 : <a href="https://mega.nz/file/IXE3xAYB#lGr444NU0XBamVYkWo_9k-v5OcjJyfCNqLXyYOVFr-4" target="_blank" rel="noopener">https://mega.nz/file/IXE3xAYB#lGr444NU0XBamVYkWo_9k-v5OcjJyfCNqLXyYOVFr-4</a></p>
-<p>Part 9 : <a href="https://mega.nz/file/ob0giTbC#tP5pNxMkO8bZBFcBOiRh-Ix9yA3CZ-09OpOLYCPLonI" target="_blank" rel="noopener">https://mega.nz/file/ob0giTbC#tP5pNxMkO8bZBFcBOiRh-Ix9yA3CZ-09OpOLYCPLonI</a></p>
-<p>Part 10 : <a href="https://mega.nz/file/I0Fi2ADA#X0A18WsK94EmOQyoGaG_09TN0eGyPajmCBhSH2Huv0o" target="_blank" rel="noopener">https://mega.nz/file/I0Fi2ADA#X0A18WsK94EmOQyoGaG_09TN0eGyPajmCBhSH2Huv0o</a></p></anotepad>
+    <style> body { color: blueviolet };
+    </style>
+<p>Part 1 : <a href="https://mega.nz/file/B8UX0Jab#D0wI-Xmv-1xwgK6fCQ6EFKseg3bLfuQxcXem52ForUo" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 2 : <a href="https://mega.nz/file/1hcQCDYA#jvdN7sF_ek51kbQDhDa_WFSPZWG61Jea2bp2euQcJuo" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 3 : <a href="https://mega.nz/file/Q1MmmTRR#6PHe0AWHPMm4Eqe1hQxNU3cSAhaY8gZISxYI8cDC3Eo" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 4 : <a href="https://mega.nz/file/ZxMDnQgC#YfmP7toYdZsYX4n_HK0SKFNhcdKN9W6FT8vx2gOWPzk" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 5 : <a href="https://mega.nz/file/8091mAAQ#tlimu-EMiNtTq5XotfOpJ4dqPjTmucp8K_2PIAhQlWo" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 6 : <a href="https://mega.nz/file/49E0TTLC#8JDiODzAwpEemWyqG70ZkgMzvMWhl-Hlydo0oTVepsY" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 7 : <a href="https://mega.nz/file/F58yBCaC#EaKIoo_Bo2aJNZjOg6X8HtEIbnkzK8wtaxx84tg1zpw" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 8 : <a href="https://mega.nz/file/IXE3xAYB#lGr444NU0XBamVYkWo_9k-v5OcjJyfCNqLXyYOVFr-4" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 9 : <a href="https://mega.nz/file/ob0giTbC#tP5pNxMkO8bZBFcBOiRh-Ix9yA3CZ-09OpOLYCPLonI" target="_blank" rel="noopener">Get Link</a></p>
+<p>Part 10 : <a href="https://mega.nz/file/cxF1CZwI#6u-LkSApsAcnzki5YW245tkQEwojujE2e6bWD4Zu7yQ" target="_blank" rel="noopener">Get Link</a></p>
 </body>
 </html>
